--- a/vpm-server/packages.config
+++ b/vpm-server/packages.config
@@ -4,4 +4,5 @@
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
 </packages>
