--- a/vpm/vpm.csproj
+++ b/vpm/vpm.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{E34A6C77-36C2-430D-A145-3149952C3700}</ProjectGuid>
+    <ProjectGuid>{E0C3DD95-71E4-4137-B13C-415A6C5B4E32}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>vpmserver</RootNamespace>
-    <AssemblyName>vpm-server</AssemblyName>
+    <RootNamespace>vpm</RootNamespace>
+    <AssemblyName>vpm</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -31,41 +31,34 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Nancy">
-      <HintPath>..\packages\Nancy.1.2.0\lib\net40\Nancy.dll</HintPath>
-    </Reference>
-    <Reference Include="Nancy.Hosting.Self">
-      <HintPath>..\packages\Nancy.Hosting.Self.1.2.0\lib\net40\Nancy.Hosting.Self.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="DBreeze">
-      <HintPath>..\packages\DBreeze.1.71.1\lib\net45\DBreeze.dll</HintPath>
-    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Mono.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VPM\PackageEndpoint.cs" />
-    <Compile Include="VPM\PackageDatabase.cs" />
-    <Compile Include="VPM\ProtobufDeserializer.cs" />
+    <Compile Include="Package.cs" />
+    <Compile Include="Mono.Options\Options.cs" />
+    <Compile Include="Actions\Actions.cs" />
+    <Compile Include="Actions\AddVoxel.cs" />
+    <Compile Include="Templates\VoxelDefinitionTemplate.voxel">
+      <DependentUpon>VoxelDefinitionTemplate.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Templates\VoxelDefinitionTemplate.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>VoxelDefinitionTemplate.voxel</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="VPM\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\vpm\vpm.csproj">
-      <Project>{E0C3DD95-71E4-4137-B13C-415A6C5B4E32}</Project>
-      <Name>vpm</Name>
-    </ProjectReference>
+    <Folder Include="Actions\" />
+    <Folder Include="Templates\" />
   </ItemGroup>
 </Project>
